# xp-net

./: ARCHITECTURE.md  Cargo.toml  README.md
common/: Cargo.toml
common/src/: crypto.rs  entropy.rs  lib.rs  physics.rs  retroactive.rs
contract_runtime/: Cargo.toml
contract_runtime/src/: contract.rs  gas.rs  host_functions.rs  lib.rs  state.rs  vm.rs
dag_core/: Cargo.toml
dag_core/src/: dag.rs  lib.rs  transaction.rs  traversal.rs  validation.rs
examples/: extropy_integration.rs
p2p_sync/: Cargo.toml
p2p_sync/src/: gossip.rs  lib.rs  messages.rs  network.rs  sync.rs
validator_mesh/: Cargo.toml
validator_mesh/src/: consensus.rs  lib.rs  validator.rs
