[workspace]
members = [
    "dag_core",
    "validator_mesh", 
    "xp_minting",
    "contract_runtime",
    "p2p_sync",
    "common",
    "storage",
    "api"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XP-Net Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
petgraph = "0.6"
crossbeam = "0.8"
futures = "0.3"
bytes = "1.5"