[package]
name = "dag_core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
blake3.workspace = true
petgraph.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
bincode = "1.3"
rand = "0.8"