[package]
name = "p2p_sync"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
dag_core = { path = "../dag_core" }
validator_mesh = { path = "../validator_mesh" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "mdns"] }
prost = "0.12"